--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,4 +1,4 @@
-<% title "#{@site.title}" %>
+<% title "Tools used by #{@site.title}" %>
 <section id="content" class="main site">
   <% cache(["full", @site]) do %>
     <%= render 'header' %>
