--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,4 +1,4 @@
-<% title "Tools" %>
+<% title "List of Tools Sites are Using" %>
 
 <section id="content" class="main">
   <div class="title_bar group">
