--- a/app/views/layouts/sidebar/_top_sites.html.erb
+++ b/app/views/layouts/sidebar/_top_sites.html.erb
@@ -1,7 +1,7 @@
 <aside>
   <h3>Top Sites</h3>
   <ul>
-    <% Site.popular(5).each do |site| %>
+    <% @popular_sites.each do |site| %>
       <li><%= link_to site.title, site %></li>
     <% end %>
   </ul>
