--- a/app/views/tool_sites/index.html.erb
+++ b/app/views/tool_sites/index.html.erb
@@ -1,6 +1,6 @@
 <% title "Sites Using #{@tool.name}" %>
 
-<section class="main tool">
+<section id="content" class="main tool">
   <% cache(["full", @tool]) do %>
     <%= render 'tools/header' %>
   <% end %>
@@ -8,3 +8,21 @@
   <%= render :partial => "tools/menu" %>
   <%= render :partial => "tools/sites", :object => @usings %>
 </section>
+
+
+<sidebar>
+  <aside>
+    <h3>Similar Tools</h3>
+    <ul class="lst">
+      <li><a href="#"><em>Javascript</em>Prototype</a></li>
+      <li><a href="#"><em>Javascript</em>MooTools</a></li>
+      <li><a href="#"><em>Javascript</em>YUI</a></li>
+    </ul>
+  </aside>
+  <aside>
+    <h3>Admin Options</h3>
+    <ul class="lst">
+      <li><%= link_to "edit", edit_tool_path(@tool) %></li>
+    </ul>
+  </aside>
+</sidebar>
