--- a/app/views/usings/_using_tool.html.erb
+++ b/app/views/usings/_using_tool.html.erb
@@ -1,12 +1,6 @@
 <% cache(["partial-using-tool", using_tool], :expires_in => 15.minutes) do %>
 <li class="tool group ind">
-  <%= link_to using_tool.tool, :class => "screenshot" do %>
-    <% if using_tool.tool.url? %>
-    <img src="http://snapshots.bloggerschoiceawards.com/images?url=<%=using_tool.tool.url%>&f=jpg&h=147&w=201&default=http://localhost:3000/images/screenshot.png" />
-    <% else %>
-      <img src="http://localhost:3000/images/screenshot.png" />
-    <% end %>
-  <% end %>
+  <a href="<%= using_tool.tool %>" class="screenshot"><% if using_tool.tool.url? %><img src="http://snapshots.bloggerschoiceawards.com/images?url=<%=using_tool.tool.url%>&f=jpg&h=147&w=201&default=http://localhost:3000/images/screenshot.png" /><% else %><img src="http://localhost:3000/images/screenshot.png" /><% end %></a>
 
   <div class="details">
     <div class="title">
@@ -15,13 +9,13 @@
         <li class="sites"><%= link_to pluralize(using_tool.tool.sites_count, "site"), using_tool.tool %></li>
         <li class="links"><%= link_to pluralize(0, "article"), using_tool.tool %></li>
       </ul>
-      <%= content_tag(:p, using_tool.description) unless using_tool.description.blank? %>
+      <% unless using_tool.description.blank? %><p><%= using_tool.description %></p><% end %>
     </div>
   
     <div class="content">
       <ul class="categories">
         <%= raw tool_categories(using_tool.tool) %>
-        <% if using_tool.tool.language_id? %><li><%= link_to using_tool.tool.language.name, using_tool.tool.language %></li><% end %>
+        <% if using_tool.tool.language_id? %><li><%= link_to using_tool.tool.cached_language[:name], using_tool.tool.cached_language[:param] %></li><% end %>
       </ul>
     </div>
   </div>
