--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,6 +60,7 @@
   </div>
 </footer>
 <%= raw javascript_include_merged :base %>
+<%= yield :javascript %>
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-90326-13']);
