--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -5,6 +5,6 @@
     <%= f.input :description, :as => :text, :required => false, :label => "About this Site" %>
   <% end %>
   <%= f.buttons do %>
-    <%= f.commit_button :label => "Create New Site" %>
+    <%= f.commit_button %>
   <% end %>
 <% end %>
