--- a/app/views/tools/_menu.html.erb
+++ b/app/views/tools/_menu.html.erb
@@ -2,4 +2,5 @@
   <%= menu_link "Sites", tool_sites_path(@tool), { :a_class => 'sites' } %>
   <%= menu_link "Articles", "#", { :a_class => 'articles' } if @tool.articles_count > 0 %>
   <%= menu_link "Jobs", "#", { :a_class => 'jobs' } if @tool.jobs_count > 0 %>
+  <%= menu_link "Books", "#", { :a_class => 'books' } if @tool.books_count > 0 %>
 </ul>
