--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -9,6 +9,7 @@
     <li class="current"><a href="#" class="sites">Sites</a></li> 
     <% if @tool.articles_count > 0 %><li><a href="#" class="articles">Articles</a></li><% end %>
     <% if @tool.jobs_count > 0 %><li><a href="#" class="jobs">Jobs</a></li><% end %>
+    <% if @tool.books_count > 0 %><li><a href="#" class="books">Books</a></li><% end %>    
   </ul>
   
   <%= render :partial => "sites", 
