--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -54,7 +54,7 @@ ul.tools li.tool { border-bottom:1px solid #c3c0bd; padding-top:1em; }
 .ind:hover { background-color:#efefef; }
 div.ind:hover { background-color:#fff; }
 div.ind { border:none; margin-bottom:3em; }
-.ind a.screenshot { float:left; margin-right:10px; width:110px; height:100px; max-width:110px; max-height:100px; }
+.ind a.screenshot { float:left; margin-right:24px; width:110px; height:100px; max-width:110px; max-height:100px; }
 .ind a.screenshot img { max-height:95px; max-width:120px;}
 .ind .title { min-height:60px; }
 .ind .title h4 { display:inline; width:100%; font-size:1.6em; }
@@ -64,7 +64,7 @@ div.ind { border:none; margin-bottom:3em; }
 .ind ul.count a { background-color:red; color:white; }
 .ind ul.count a:hover { background-color:blue; }
 .ind ul.count li.sites a { background-color:red; }
-.ind ul.count li.links a { background-color:yellow; }
+.ind ul.count li.links a { background-color:orange; }
 .ind ul.count li.alexa { background-color:blue; color:white; }
 .ind ul.count li.pagerank { background-color:green; color:white; }
 .ind p { font-size:1.4em; }
@@ -80,6 +80,8 @@ section.tab ul.tools a.screenshot, section.tab ul.tools a.screenshot img,
 section.tab ul.sites a.screenshot, section.tab ul.sites a.screenshot img { max-height:95px; max-width:120px; }
 section.tab ul.tools .details, section.tab ul.sites .details { margin-left:140px; min-height:88px; }
 
+section.tab ul.usings div.details, ul.usings div.details { margin-left:0; min-height:0; padding:0 1.5em; }
+
 /* sites on a tool list, tools on a site list*/
 .sites .tools li a, .tools .sites li a { display:block; padding:.3em; margin-right:.4em; font-size:1.2em;  }
 .sites .tools, .tools .sites { margin:.4em 0; }
@@ -93,6 +95,10 @@ section.tab ul.tools .details, section.tab ul.sites .details { margin-left:140px
 .tool .categories li { margin-left:10px; float:right; }
 .tool .categories li a { background-color:#ccc; }
 
+/* List of categories for a using-tool */
+.tool .using { clear:both; margin:1.5em 0 0 0; }
+.tool .using li { float:left; margin-right:10px; }
+.tool .using li a { background-color:#ccc; padding:.4em; }
 
 
 /* sites#index, tools#show */
@@ -134,3 +140,18 @@ section.site { }
 section.site .site_details { margin-left: 220px; }
 section.site ul.tools { list-style:none; }
 section.site ul.tools li { border-bottom:1px solid #c3c0bd; padding-top:1em; }
+
+
+
+
+.pagination { background: white; }
+.pagination a, .pagination span, .pagination em { padding: .2em .5em; display: block; float: left; margin-right: 1px; }
+.pagination span.disabled { color: #999; border: 1px solid #DDD; }
+.pagination em { font-weight: bold; background: #2E6AB1; color: white; border: 1px solid #2E6AB1; }
+.pagination a { text-decoration: none; color: #105CB6; border: 1px solid #9AAFE5; }
+.pagination a:hover, .pagination a:focus { color: #003; border-color: #003; }
+.pagination .page_info { background: #2E6AB1; color: white; padding: .4em .6em; width: 22em; margin-bottom: .3em; text-align: center; }
+.pagination .page_info b { color: #003; background: #6aa6ed; padding: .1em .25em; }
+.pagination:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
+* html .pagination { height: 1%; }
+*:first-child+html .pagination { overflow: hidden; }
