Added admin data

--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -65,8 +65,6 @@ div.ind { border:none; margin-bottom:3em; }
 .ind ul.count a:hover { background-color:blue; }
 .ind ul.count li.sites a { background-color:red; }
 .ind ul.count li.links a { background-color:orange; }
-.ind ul.count li.alexa { background-color:blue; color:white; }
-.ind ul.count li.pagerank { background-color:green; color:white; }
 .ind p { font-size:1.4em; }
 
 /* tools#show, sites#show */
@@ -155,3 +153,12 @@ section.site ul.tools li { border-bottom:1px solid #c3c0bd; padding-top:1em; }
 .pagination:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
 * html .pagination { height: 1%; }
 *:first-child+html .pagination { overflow: hidden; }
+
+
+/* Counts */
+ul.count { color:#fff; width:120px; }
+ul.count li.alexa { background-color:blue; }
+ul.count li.pagerank { background-color:green; }
+ul.count li { margin:0; position: relative;	 }
+ul.count li span, ul.count li a { display: block; padding: 7px; z-index: 2; font-size:1.1em; }
+ul.count li em { float: right; font-style:normal; font-weight:bold; padding-left:12px; }
