--- a/app/views/layouts/sidebar/_site_stats.html.erb
+++ b/app/views/layouts/sidebar/_site_stats.html.erb
@@ -2,7 +2,7 @@
   <h3>Quick Stats</h3>
   <ul class="group lst">
     <li><a href="<%= sites_path %>"><em><%= Site.count %></em>Sites</a></li>
-    <li><a href="<%= tools_path %>"<em><%= Tool.count %></em>Tools</a></li>
+    <li><a href="<%= tools_path %>"><em><%= Tool.count %></em>Tools</a></li>
     <li><a href="/categories/programming-language"><em><%= Tool.languages.count %></em> Programming Languages</a></li>
     <li><a href="#"><em>34,434</em> Articles about Sites</a></li>
     <li><a href="#"><em>345</em> Job Postings</a></li>
