--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -5,11 +5,10 @@
   <% end %>
   
   <ul class="tabs">
-    <li class="current"><a href="#" class="sites">Sites</a></li> 
+    <li class="current"><a href="#" class="sites">Tools</a></li> 
     <li><a href="#" class="articles">Articles</a></li> 
     <li><a href="#" class="jobs">Jobs</a></li>
   </ul>
-
 
   <section class="tab">
     <% if @site.tools_count > 0 %>
