--- a/app/views/usings/_using_tool.html.erb
+++ b/app/views/usings/_using_tool.html.erb
@@ -4,8 +4,8 @@
     <div class="title">
       <h4><%= link_to using_tool.tool.name, using_tool.tool %></h4>
       <ul class="count">
-        <li class="sites"><%= link_to pluralize(using_tool.tool.sites_count, "site"), using_tool.tool %></li>
-        <li class="links"><%= link_to pluralize(0, "article"), using_tool.tool %></li>
+        <%= raw tool_sites_count(using_tool.tool) %>
+        <%= raw tool_articles_count(using_tool.tool) %>
       </ul>
       <% unless using_tool.description.blank? %><p><%= using_tool.description %></p><% end %>
 
