--- a/public/stylesheets/flutie.css
+++ b/public/stylesheets/flutie.css
@@ -389,7 +389,9 @@ form abbr {
   border-bottom: 0; }
 
 label {
-  display: block; }
+  display: block;
+  color: #333;
+  font-size: 18px; }
 
 .required label {
   font-weight: bold; }
@@ -453,8 +455,9 @@ input[type="time"],
 input[type="url"],
 input[type="week"] {
   font-size: inherit;
+  border: 1px solid #888888;
   padding: 3px 2px;
-  width: 60%; }
+  width: 98%; }
 
 .ie6 input {
   vertical-align: text-bottom; }
@@ -489,11 +492,12 @@ input[type="radio"] {
 /* Textareas */
 textarea {
   font-size: inherit;
-  height: 100px;
+  height: auto;
   margin: 0 0.5em 0.5em 0;
   padding: 5px;
-  width: 440px;
-  overflow: auto; }
+  width: 97%;
+  overflow: auto;
+  font-size: 18px; }
 
 /* Select fields */
 fieldset .select select {
