--- a/app/stylesheets/layout.scss
+++ b/app/stylesheets/layout.scss
@@ -1,7 +1,9 @@
 $header-link: #68aff3;
 
 body { font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Helvetica, Arial, sans-serif; color: #51463d; font-size: 62.5%; background:#222; }
+body.popup { background-color:#E3E3E3; }
 .container { max-width:1100px; margin:0 auto; position:relative; height:100%; }
+body.popup .container { max-width:600px; }
 .group:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
 ul { list-style:none; margin:0; padding:0; }
 
@@ -47,6 +49,7 @@ section, aside { display:block; }
 
 /* main content */
 #content { width:800px; float:left; padding:1em; }
+body.popup #content { width:550px; }
 #content_with_nav { width:670px; float:left; min-height:500px; margin-left:-1px; }
 #content_with_nav.no_sidebar { margin-left:4px; }
 .main section { padding:1em; }
