--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -66,6 +66,7 @@ div.ind { border:none; margin-bottom:3em; }
 .ind ul.count li.sites a { background-color:red; }
 .ind ul.count li.links a { background-color:orange; }
 .ind p { font-size:1.4em; }
+ul.sites li.ind:last-child, ul.usings li.ind:last-child { border-bottom:1px solid #ccc; }
 
 /* tools#show, sites#show */
 section.tool a.screenshot, section.tool a.screenshot img,
@@ -98,50 +99,13 @@ section.tab ul.usings div.details, ul.usings div.details { margin-left:0; min-he
 .tool .using li { float:left; margin-right:10px; }
 .tool .using li a { background-color:#ccc; padding:.4em; }
 
-
-/* sites#index, tools#show */
-/*
-
-.tool .title p { max-width:435px; }
-.tool .content .sites { float:left; }
-.tool .content .sites li { float:left; margin-right:10px; }
-.tool .content .sites li a { background-color:yellow; }
-.tool .content .categories li { margin-left:10px; float:right; }
-.tool .categories li a { background-color:#ccc; }
-
-
-
-ul.sites li.site img.screenshot.small { width:100px; height:78px; }
-ul.sites li.site .site_info { margin-left: 120px; }
-ul.sites li.site .site_info p.description { line-height:1.1em; }
-ul.sites li.site ul.ranks { list-style:none; float:right; border:1px solid #ccc; width:200px; }
-ul.sites li.site ul.ranks li { float:left; clear:left; width:100%; text-align:center; }
-ul.sites li.site ul.ranks li.alexa { border-bottom:1px solid #ccc; }
-ul.sites li.site ul.ranks li.pagerank { position:relative; color:#eee; text-align:left; }
-ul.sites li.site ul.ranks li.pagerank p { width:200px; position:absolute; clear:both;}
-ul.ranks li.pagerank span { display:block; background-color:green; position:absolute; height:1.4em;}
-ul.ranks li.pagerank.pagerank-0 span { width:0px; color:#000; } 
-ul.ranks li.pagerank.pagerank-1 span { width:20px; } 
-ul.ranks li.pagerank.pagerank-2 span { width:40px; } 
-ul.ranks li.pagerank.pagerank-3 span { width:60px; } 
-ul.ranks li.pagerank.pagerank-4 span { width:80px; } 
-ul.ranks li.pagerank.pagerank-5 span { width:100px; } 
-ul.ranks li.pagerank.pagerank-6 span { width:120px; } 
-ul.ranks li.pagerank.pagerank-7 span { width:140px; } 
-ul.ranks li.pagerank.pagerank-8 span { width:160px; } 
-ul.ranks li.pagerank.pagerank-9 span { width:180px; } 
-ul.ranks li.pagerank.pagerank-10 span { width:200px; } 
-*/
-
 /* sites#show */
 section.site { }
 section.site .site_details { margin-left: 220px; }
 section.site ul.tools { list-style:none; }
 section.site ul.tools li { border-bottom:1px solid #c3c0bd; padding-top:1em; }
 
-
-
-
+/* Pagination */
 .pagination { background: white; }
 .pagination a, .pagination span, .pagination em { padding: .2em .5em; display: block; float: left; margin-right: 1px; }
 .pagination span.disabled { color: #999; border: 1px solid #DDD; }
@@ -162,3 +126,8 @@ ul.count li.pagerank { background-color:green; }
 ul.count li { margin:0; position: relative;	 }
 ul.count li span, ul.count li a { display: block; padding: 7px; z-index: 2; font-size:1.1em; }
 ul.count li em { float: right; font-style:normal; font-weight:bold; padding-left:12px; }
+
+
+/* forms */
+li.countdown { float:right; font-size: 16px; margin: 0 14px 0 0;}
+li.countdown .alert { color:red; }
