--- a/public/stylesheets/tokeninput.css
+++ b/public/stylesheets/tokeninput.css
@@ -6,7 +6,7 @@ ul.token-input-list {
   width: 99%;
   border: 1px solid #999;
   cursor: text;
-  font-size: 12px;
+  font-size: 16px;
   font-family: Verdana;
   z-index: 999;
   margin: 0;
@@ -14,38 +14,51 @@ ul.token-input-list {
   background-color: #fff; }
 
 ul.token-input-list li {
-  list-style-type: none; }
+  list-style-type: none;
+  margin: 5px 5px 0px 0;
+  padding: 2px 0; }
 
 ul.token-input-list li input {
   border: 0;
-  width: 350px;
+  width: 300px;
   padding: 3px 8px;
   background-color: white; }
 
-li.token-input-token {
+ul.token-input-list li.token-input-token {
   overflow: hidden;
   height: auto !important;
   height: 1%;
-  margin: 3px;
+  margin: 0px;
   padding: 3px 5px;
-  background-color: #d0efa0;
-  color: #000;
-  font-weight: bold;
+  color: #eee;
+  font-weight: normal;
   cursor: default;
-  display: block; }
+  display: block;
+  background-color: #5670A6;
+  font-size: 12px; }
+
+ul.token-input-list li.token-input-input-token {
+  padding: 0;
+  margin: 0; }
+
+ul.token-input-list li.token-input-input-token input {
+  padding: 3px 5px;
+  margin: 5px 5px 0px 0; }
 
 li.token-input-token p {
   float: left;
-  padding: 0;
-  margin: 0; }
+  padding: 0 0 4px 0;
+  margin: 0 10px;
+  font-size: 16px; }
 
 li.token-input-token span {
   float: right;
   color: #777;
-  cursor: pointer; }
+  cursor: pointer;
+  padding-right: 10px; }
 
 li.token-input-selected-token {
-  background-color: #08844e;
+  background-color: #eff2f7;
   color: #fff; }
 
 li.token-input-selected-token span {
@@ -60,7 +73,7 @@ div.token-input-dropdown {
   border-right: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   cursor: default;
-  font-size: 12px;
+  font-size: 16px;
   font-family: Verdana;
   z-index: 1; }
 
@@ -68,7 +81,8 @@ div.token-input-dropdown p {
   margin: 0;
   padding: 5px;
   font-weight: bold;
-  color: #777; }
+  color: #777;
+  font-size: 14px; }
 
 div.token-input-dropdown ul {
   margin: 0;
@@ -76,8 +90,9 @@ div.token-input-dropdown ul {
 
 div.token-input-dropdown ul li {
   background-color: #fff;
-  padding: 3px;
-  list-style-type: none; }
+  padding: 5px;
+  list-style-type: none;
+  margin: 0; }
 
 div.token-input-dropdown ul li.token-input-dropdown-item {
   background-color: #fafafa; }
@@ -90,4 +105,5 @@ div.token-input-dropdown ul li em {
   font-style: normal; }
 
 div.token-input-dropdown ul li.token-input-selected-dropdown-item {
-  background-color: #d0efa0; }
+  background-color: #5670A6;
+  color: #eee; }
