--- a/public/stylesheets/base_packaged.css
+++ b/public/stylesheets/base_packaged.css
@@ -79,7 +79,7 @@ form ol li.error input {background: #FBE3E4}
 p.inline-errors {color: #D12F19}
 form ol li.file {background: #e1e1e1; border: 1px solid #c8c8c8; padding: 10px}
 form abbr {border-bottom: 0}
-label {display: block}
+label {display: block; color: #333; font-size: 18px}
 .required label {font-weight: bold}
 .checkbox_field label, .radio_field label {font-weight: normal}
 a.cancel {color: #7d0d0d}
@@ -91,7 +91,7 @@ legend {font-weight: bold}
 fieldset.buttons {background: inherit; border: 0; padding: 0}
 fieldset.buttons li {display: inline}
 .radio fieldset {margin: 0; padding: 0}
- input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="email"], input[type="month"], input[type="number"], input[type="password"], input[type="range"], input[type="search"], input[type="tel"], input[type="text"], input[type="time"], input[type="url"], input[type="week"] {font-size: inherit; padding: 3px 2px; width: 300px}
+ input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="email"], input[type="month"], input[type="number"], input[type="password"], input[type="range"], input[type="search"], input[type="tel"], input[type="text"], input[type="time"], input[type="url"], input[type="week"] {font-size: inherit; border: 1px solid #888888; padding: 3px 2px; width: 98%}
 .ie6 input {vertical-align: text-bottom}
 input[disabled='disabled'] {background-color: #fcfcfc; cursor: default}
 input[type="checkbox"] {margin: 0 3px 0 0; position: relative; top: -2px; vertical-align: middle}
@@ -99,7 +99,7 @@ input[type="checkbox"] {margin: 0 3px 0 0; position: relative; top: -2px; vertic
 input[type="radio"] {margin: 0 3px 0 0; position: relative; top: -2px; vertical-align: middle}
 .check_boxes label {display: inline; padding: 0; vertical-align: middle}
 .radio label {padding: 0}
- textarea {font-size: inherit; height: 200px; margin: 0 0.5em 0.5em 0; padding: 5px; width: 440px; overflow: auto}
+ textarea {font-size: inherit; height: auto; margin: 0 0.5em 0.5em 0; padding: 5px; width: 97%; overflow: auto; font-size: 18px}
  fieldset .select select {width: 200px; font-size: 0.9em}
 optgroup {margin: 0 0 .5em 0}
  form ol li.date ol li, form ol li.time ol li {display: inline}
@@ -122,24 +122,28 @@ dl dd {margin-bottom: 0em}
 dd {margin-left: 0.5em}
 li {line-height: 1.4}
 ol ol, ol ul, ul ul, ul ol {margin-left: 1em}
- ul.token-input-list {overflow: hidden; height: auto !important; height: 1%; width: 99%; border: 1px solid #999; cursor: text; font-size: 12px; font-family: Verdana; z-index: 999; margin: 0; padding: 0; background-color: #fff}
-ul.token-input-list li {list-style-type: none}
-ul.token-input-list li input {border: 0; width: 350px; padding: 3px 8px; background-color: white}
-li.token-input-token {overflow: hidden; height: auto !important; height: 1%; margin: 3px; padding: 3px 5px; background-color: #d0efa0; color: #000; font-weight: bold; cursor: default; display: block}
-li.token-input-token p {float: left; padding: 0; margin: 0}
-li.token-input-token span {float: right; color: #777; cursor: pointer}
-li.token-input-selected-token {background-color: #08844e; color: #fff}
+ ul.token-input-list {overflow: hidden; height: auto !important; height: 1%; width: 99%; border: 1px solid #999; cursor: text; font-size: 16px; font-family: Verdana; z-index: 999; margin: 0; padding: 0; background-color: #fff}
+ul.token-input-list li {list-style-type: none; margin: 5px 5px 0px 0; padding: 2px 0}
+ul.token-input-list li input {border: 0; width: 300px; padding: 3px 8px; background-color: white}
+ul.token-input-list li.token-input-token {overflow: hidden; height: auto !important; height: 1%; margin: 0px; padding: 3px 5px; color: #eee; font-weight: normal; cursor: default; display: block; background-color: #5670A6; font-size: 12px}
+ul.token-input-list li.token-input-input-token {padding: 0; margin: 0}
+ul.token-input-list li.token-input-input-token input {padding: 3px 5px; margin: 5px 5px 0px 0}
+li.token-input-token p {float: left; padding: 0 0 4px 0; margin: 0 10px; font-size: 16px}
+li.token-input-token span {float: right; color: #777; cursor: pointer; padding-right: 10px}
+li.token-input-selected-token {background-color: #eff2f7; color: #fff}
 li.token-input-selected-token span {color: #bbb}
-div.token-input-dropdown {position: absolute; width: 99%; background-color: #fff; overflow: hidden; border-left: 1px solid #ccc; border-right: 1px solid #ccc; border-bottom: 1px solid #ccc; cursor: default; font-size: 12px; font-family: Verdana; z-index: 1}
-div.token-input-dropdown p {margin: 0; padding: 5px; font-weight: bold; color: #777}
+div.token-input-dropdown {position: absolute; width: 99%; background-color: #fff; overflow: hidden; border-left: 1px solid #ccc; border-right: 1px solid #ccc; border-bottom: 1px solid #ccc; cursor: default; font-size: 16px; font-family: Verdana; z-index: 1}
+div.token-input-dropdown p {margin: 0; padding: 5px; font-weight: bold; color: #777; font-size: 14px}
 div.token-input-dropdown ul {margin: 0; padding: 0}
-div.token-input-dropdown ul li {background-color: #fff; padding: 3px; list-style-type: none}
+div.token-input-dropdown ul li {background-color: #fff; padding: 5px; list-style-type: none; margin: 0}
 div.token-input-dropdown ul li.token-input-dropdown-item {background-color: #fafafa}
 div.token-input-dropdown ul li.token-input-dropdown-item2 {background-color: #fff}
 div.token-input-dropdown ul li em {font-weight: bold; font-style: normal}
-div.token-input-dropdown ul li.token-input-selected-dropdown-item {background-color: #d0efa0}
+div.token-input-dropdown ul li.token-input-selected-dropdown-item {background-color: #5670A6; color: #eee}
 body {font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Helvetica, Arial, sans-serif; color: #51463d; font-size: 62.5%; background: #222}
+body.popup {background-color: #E3E3E3}
 .container {max-width: 1100px; margin: 0 auto; position: relative; height: 100%}
+body.popup .container {max-width: 600px}
 .group:after {content: "."; display: block; height: 0; clear: both; visibility: hidden}
 ul {list-style: none; margin: 0; padding: 0}
  header {display: block; background-color: #222; border-top: 6px solid #68aff3; height: 100px; border-bottom: 3px solid #68aff3}
@@ -171,6 +175,7 @@ ul {list-style: none; margin: 0; padding: 0}
 #main {background-color: #E3E3E3; color: #1B1B1B; padding: 2em 0}
 #content, #content_with_nav, sidebar aside {background-color: #fff; padding: .6em; border: 1px solid #ccc}
  #content {width: 800px; float: left; padding: 1em}
+body.popup #content {width: 550px}
 #content_with_nav {width: 670px; float: left; min-height: 500px; margin-left: -1px}
 #content_with_nav.no_sidebar {margin-left: 4px}
 .main section {padding: 1em}
@@ -202,7 +207,7 @@ footer section h3 {color: #E2DDDC; font-size: 10px; text-transform: uppercase}
 p.breadcrumbs {font-size: .8em}
 a.add {background: url(/images/icons/13-plus.png) no-repeat; padding-left: 20px}
 a.remove {background: url(/images/icons/14-minus.png) no-repeat 0 7px; padding-left: 20px}
-img.screenshot {border: 1px solid #777; float: left}
+img.screenshot, .screenshot img {border: 1px solid #ccc; float: left}
 a.external {font-size: 1em}
 a:link, a:visited {color: #3792B3; font-weight: bold; outline-color: -moz-use-text-color; outline-style: none; outline-width: medium; text-decoration: none}
  section.announcement {margin-bottom: 1em}
@@ -236,7 +241,7 @@ ul.tools li.tool {border-bottom: 1px solid #c3c0bd; padding-top: 1em}
 .ind:hover {background-color: #efefef}
 div.ind:hover {background-color: #fff}
 div.ind {border: none; margin-bottom: 3em}
-.ind a.screenshot {float: left; margin-right: 10px; width: 110px; height: 100px; max-width: 110px; max-height: 100px}
+.ind a.screenshot {float: left; margin-right: 24px; width: 110px; height: 100px; max-width: 110px; max-height: 100px}
 .ind a.screenshot img {max-height: 95px; max-width: 120px}
 .ind .title {min-height: 60px}
 .ind .title h4 {display: inline; width: 100%; font-size: 1.6em}
@@ -246,15 +251,15 @@ div.ind {border: none; margin-bottom: 3em}
 .ind ul.count a {background-color: red; color: white}
 .ind ul.count a:hover {background-color: blue}
 .ind ul.count li.sites a {background-color: red}
-.ind ul.count li.links a {background-color: yellow}
-.ind ul.count li.alexa {background-color: blue; color: white}
-.ind ul.count li.pagerank {background-color: green; color: white}
+.ind ul.count li.links a {background-color: orange}
 .ind p {font-size: 1.4em}
+ul.sites li.ind:last-child, ul.usings li.ind:last-child {border-bottom: 1px solid #ccc}
  section.tool a.screenshot, section.tool a.screenshot img, section.site a.screenshot, section.site a.screenshot img {max-width: 200px; max-height: 147px}
 section.tool .details, section.site .details {margin-left: 220px; min-height: 145px}
 section.tool section.tab ul.sites, section.sites section.tab ul.tools {position: relative}
 section.tab ul.tools a.screenshot, section.tab ul.tools a.screenshot img, section.tab ul.sites a.screenshot, section.tab ul.sites a.screenshot img {max-height: 95px; max-width: 120px}
 section.tab ul.tools .details, section.tab ul.sites .details {margin-left: 140px; min-height: 88px}
+section.tab ul.usings div.details, ul.usings div.details {margin-left: 0; min-height: 0; padding: 0 1.5em}
  .sites .tools li a, .tools .sites li a {display: block; padding: .3em; margin-right: .4em; font-size: 1.2em}
 .sites .tools, .tools .sites {margin: .4em 0}
 .sites .tools li, .tools .sites li {float: left}
@@ -263,9 +268,31 @@ section.tab ul.tools .details, section.tab ul.sites .details {margin-left: 140px
  .tool .categories {position: absolute; bottom: 0; right: 0; margin: 0; padding: 0}
 .tool .categories li {margin-left: 10px; float: right}
 .tool .categories li a {background-color: #ccc}
-   section.site .site_details {margin-left: 220px}
+ .tool .using {clear: both; margin: 1.5em 0 0 0}
+.tool .using li {float: left; margin-right: 10px}
+.tool .using li a {background-color: #ccc; padding: .4em}
+ section.site .site_details {margin-left: 220px}
 section.site ul.tools {list-style: none}
 section.site ul.tools li {border-bottom: 1px solid #c3c0bd; padding-top: 1em}
+ .pagination {background: white}
+.pagination a, .pagination span, .pagination em {padding: .2em .5em; display: block; float: left; margin-right: 1px}
+.pagination span.disabled {color: #999; border: 1px solid #DDD}
+.pagination em {font-weight: bold; background: #2E6AB1; color: white; border: 1px solid #2E6AB1}
+.pagination a {text-decoration: none; color: #105CB6; border: 1px solid #9AAFE5}
+.pagination a:hover, .pagination a:focus {color: #003; border-color: #003}
+.pagination .page_info {background: #2E6AB1; color: white; padding: .4em .6em; width: 22em; margin-bottom: .3em; text-align: center}
+.pagination .page_info b {color: #003; background: #6aa6ed; padding: .1em .25em}
+.pagination:after {content: "."; display: block; height: 0; clear: both; visibility: hidden}
+* html .pagination {height: 1%}
+*:first-child + html .pagination {overflow: hidden}
+ ul.count {color: #fff; width: 120px}
+ul.count li.alexa {background-color: blue}
+ul.count li.pagerank {background-color: green}
+ul.count li {margin: 0; position: relative}
+ul.count li span, ul.count li a {display: block; padding: 7px; z-index: 2; font-size: 1.1em}
+ul.count li em {float: right; font-style: normal; font-weight: bold; padding-left: 12px}
+ li.countdown {float: right; font-size: 16px; margin: 0 14px 0 0}
+li.countdown .alert {color: red}
  form.formtastic fieldset ol li.autolabel, form.formtastic fieldset ol li.tokeninput {position: relative}
 form.formtastic fieldset ol li.autolabel label {margin: .4em 0 0 0.6em; position: absolute; color: #666; font-weight: normal}
 form.formtastic fieldset ol li.nolabel label {display: none}
@@ -273,3 +300,9 @@ form.formtastic fieldset ol li.tokeninput {margin-bottom: 2em}
 .using textarea {height: 55px; width: 97%}
 .using .countdown {margin: 0; height: 30px; position: absolute; width: 580px}
 .using .countdown span {float: right}
+form {font-size: 1.4em}
+.check_boxes {position: relative}
+.check_boxes fieldset {margin: 0 0 5px 0}
+.check_boxes fieldset li {float: left; width: 30%}
+.inline-hints {margin: 0.5em .25em; font-size: .8em}
+form.formtastic fieldset {border: 0; background: none}
