--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       <ul>
         <li><a href="<%= tools_path %>"><strong>Tools</strong></a></li>
         <li><a href="<%= sites_path %>"><strong>Sites</strong></a></li>
+        <li><a href="<%= articles_path %>"><strong>Articles</strong></a></li>
         <li><a href="#"><strong>Jobs</strong></a></li>
         <li><a href="#"><strong>Books</strong></a></li>
       </ul>
