--- a/app/views/home/beta.html.erb
+++ b/app/views/home/beta.html.erb
@@ -1,6 +1,6 @@
 <section id="content" class="main">
   <section class="announcement">
-    <p class="title">Discover what powers the sites you visit</p>
+    <p class="title">Discover what tools power the sites you visit</p>
     <p>We're an <em>open resource</em> for what runs the web.
       You can <%= link_to "see what tools a site uses", sites_path %>. 
       Fill in what tools other sites are using or <%= link_to "add your own site", new_site_path %> or <%= link_to "tool", new_tool_path %>.</p>
