--- a/app/views/layouts/sidebar/_site_stats.html.erb
+++ b/app/views/layouts/sidebar/_site_stats.html.erb
@@ -4,7 +4,7 @@
     <li><a href="<%= sites_path %>"><em><%= Site.count %></em>Sites</a></li>
     <li><a href="<%= tools_path %>"><em><%= Tool.count %></em>Tools</a></li>
     <li><a href="/categories/programming-language"><em><%= Tool.languages.count %></em> Programming Languages</a></li>
-    <li><a href="#"><em>34,434</em> Articles about Sites</a></li>
+    <li><a href="#"><em><%= Article.count %></em> Articles about Sites</a></li>
     <li><a href="#"><em>345</em> Job Postings</a></li>
   </ul>
 </aside>
