--- a/public/stylesheets/base_packaged.css
+++ b/public/stylesheets/base_packaged.css
@@ -129,7 +129,7 @@ ul.token-input-list li.token-input-token {overflow: hidden; height: auto !import
 ul.token-input-list li.token-input-input-token {padding: 0; margin: 0}
 ul.token-input-list li.token-input-input-token input {padding: 3px 5px; margin: 5px 5px 0px 0}
 li.token-input-token p {float: left; padding: 0 0 4px 0; margin: 0 10px; font-size: 16px}
-li.token-input-token span {float: right; color: #777; cursor: pointer; padding-right: 10px}
+li.token-input-token span {float: right; color: #bbb; cursor: pointer; padding-right: 10px}
 li.token-input-selected-token {background-color: #eff2f7; color: #fff}
 li.token-input-selected-token span {color: #bbb}
 div.token-input-dropdown {position: absolute; width: 99%; background-color: #fff; overflow: hidden; border-left: 1px solid #ccc; border-right: 1px solid #ccc; border-bottom: 1px solid #ccc; cursor: default; font-size: 16px; font-family: Verdana; z-index: 1}
@@ -140,6 +140,8 @@ div.token-input-dropdown ul li.token-input-dropdown-item {background-color: #faf
 div.token-input-dropdown ul li.token-input-dropdown-item2 {background-color: #fff}
 div.token-input-dropdown ul li em {font-weight: bold; font-style: normal}
 div.token-input-dropdown ul li.token-input-selected-dropdown-item {background-color: #5670A6; color: #eee}
+.inline-tokenlist ul.token-input-list li input {width: 200px}
+.inline-tokenlist ul.token-input-list li.token-input-token {float: left}
 body {font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Helvetica, Arial, sans-serif; color: #51463d; font-size: 62.5%; background: #222}
 body.popup {background-color: #E3E3E3}
 .container {max-width: 1100px; margin: 0 auto; position: relative; height: 100%}
@@ -244,22 +246,23 @@ div.ind {border: none; margin-bottom: 3em}
 .ind a.screenshot {float: left; margin-right: 24px; width: 110px; height: 100px; max-width: 110px; max-height: 100px}
 .ind a.screenshot img {max-height: 95px; max-width: 120px}
 .ind .title {min-height: 60px}
-.ind .title h4 {display: inline; width: 100%; font-size: 1.6em}
-.ind .details {margin-left: 140px; min-height: 88px; position: relative}
-.ind ul.count, .ind > ul.sites {float: right; list-style: none; margin: 0}
+.ind .title h4 {display: inline; width: 480px; font-size: 1.6em; float: left}
+.ind .details {min-height: 88px; position: relative}
+.ind ul.count, .ind > ul.sites {float: right; list-style: none; margin: 0 0 0 20px}
 .ind ul.count a, .ind > ul.sites a, .ind ul.categories a {display: block; padding: 4px}
 .ind ul.count a {background-color: red; color: white}
 .ind ul.count a:hover {background-color: blue}
 .ind ul.count li.sites a {background-color: red}
 .ind ul.count li.links a {background-color: orange}
-.ind p {font-size: 1.4em}
+.ind p {font-size: 1.4em; clear: left}
+.ind .title p, .ind .title h4 {clear: none; width: 590px}
 ul.sites li.ind:last-child, ul.usings li.ind:last-child {border-bottom: 1px solid #ccc}
  section.tool a.screenshot, section.tool a.screenshot img, section.site a.screenshot, section.site a.screenshot img {max-width: 200px; max-height: 147px}
-section.tool .details, section.site .details {margin-left: 220px; min-height: 145px}
+section.tool .details, section.site .details {min-height: 145px}
 section.tool section.tab ul.sites, section.sites section.tab ul.tools {position: relative}
 section.tab ul.tools a.screenshot, section.tab ul.tools a.screenshot img, section.tab ul.sites a.screenshot, section.tab ul.sites a.screenshot img {max-height: 95px; max-width: 120px}
 section.tab ul.tools .details, section.tab ul.sites .details {margin-left: 140px; min-height: 88px}
-section.tab ul.usings div.details, ul.usings div.details {margin-left: 0; min-height: 0; padding: 0 1.5em}
+section.tab ul.usings div.details, ul.usings div.details, ul.sites div.details {margin-left: 0; min-height: 0; padding: 0 1.5em}
  .sites .tools li a, .tools .sites li a {display: block; padding: .3em; margin-right: .4em; font-size: 1.2em}
 .sites .tools, .tools .sites {margin: .4em 0}
 .sites .tools li, .tools .sites li {float: left}
