--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,6 +60,11 @@
     </section>
   </div>
 </footer>
+<% if Rails.env == "production" %>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+<% else %>
+  <script src="/javascripts/jquery/jquery.js" type="text/javascript"></script>
+<% end %>
 <%= raw javascript_include_merged :base %>
 <%= yield :javascript %>
 <script type="text/javascript">
